fixing aesthetic html and css code

--- a/home.html
+++ b/home.html
@@ -10,10 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- CDN JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
-<!--NavBar-->
+    <!--NavBar-->
     <header class="NavBar">
         <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
@@ -73,7 +75,7 @@
         </button>
     </section>
     
-<!--Footer-->
+    <!--Footer-->
     <footer>
         <div class="get-in-touch">
             <h8>GET IN TOUCH</h8><br>
@@ -112,5 +114,6 @@
             <p>For more information please refer to: <a href="https://www.drugs.com/" target="_blank" class="marketing-and-media" style="color: #0080A6;">Drugs.com</a></p>
         </div>
     </footer>
-</body>
-</html>
+        <script src="script.js"></script>
+    </body>
+    </html>
