--- a/signup.html
+++ b/signup.html
@@ -10,25 +10,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- CDN JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
 <!--NavBar-->
-<header class="NavBar">
-    <div class="NavBarBtn" id="NavBar">
-        <button class="NavBarBtn">
-            <i class="fa fa-home" id="home"></i>
-            <a href="home.html"></a>
-        </button>
-    </div>
-        <img src="images/PharmlyLogo.png" id="headerImg">
-        <div class="NavBarBtn">
+    <header class="NavBar">
+        <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
-                <i class="fa fa-user-circle" id="login"></i>
-                <a href="profile.html">Login</a>
+                <i class="fa fa-home" id="home"></i>
+                <a href="home.html"></a>
             </button>
         </div>
-</header>
+            <img src="images/PharmlyLogo.png" id="headerImg">
+            <div class="NavBarBtn">
+                <button class="NavBarBtn">
+                    <i class="fa fa-user-circle" id="login"></i>
+                    <a href="profile.html">Login</a>
+                </button>
+            </div>
+    </header>
 
 <!--Header-->
     <div class="header-title">
@@ -193,5 +195,6 @@
         <p>For more information please refer to: <a href="https://www.drugs.com/" target="_blank" class="marketing-and-media" style="color: #0080A6;">Drugs.com</a></p>
     </div>
 </footer>
+    <script src="script.js"></script>
 </body>
 </html>
