--- a/profile.html
+++ b/profile.html
@@ -10,27 +10,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- CDN JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
-<!--NavBar-->
-<header class="NavBar">
-    <div class="NavBarBtn" id="NavBar">
-        <button class="NavBarBtn">
-            <i class="fa fa-home" id="home"></i>
-            <a href="home.html"></a>
-        </button>
-    </div>
-        <img src="images/PharmlyLogo.png" id="headerImg">
-        <div class="NavBarBtn">
+    <!--NavBar-->
+    <header class="NavBar">
+        <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
-                <i class="fa fa-user-circle" id="login"></i>
-                <a href="profile.html">Login</a>
+                <i class="fa fa-home" id="home"></i>
+                <a href="home.html"></a>
             </button>
         </div>
-</header>
+            <img src="images/PharmlyLogo.png" id="headerImg">
+            <div class="NavBarBtn">
+                <button class="NavBarBtn">
+                    <i class="fa fa-user-circle" id="login"></i>
+                    <a href="profile.html">Login</a>
+                </button>
+            </div>
+    </header>
 
-<!--Header-->
+    <!--Header-->
     <div class="header-title">
         <h3 style="padding-top: 55px;">Enter your medication:</h3>
             <!--Search Form-->
@@ -40,49 +42,49 @@
         </form>
         </div>
 
-<!--Profile-->
-<section class="profile">
-    <div class="Jerry-img">
-        <img src="images/JerrySperry.jpg">
-    </div>
-    <h9>Jerry Sperry</h9>
-</section>
-<div class="description-Btn">
-    <button class="description-tab">Medical Record</button>
-    <button class="description-tab">Medications</button>
-    <button class="description-tab">Coupons</button>
-</div>
-<section style="background-color: #F4F4F4;">
-    <div class="profile-Record">
-        <h10>DOB:</h10><p style="margin-left: 60px;">March 4, 1968</p><br>
-        <h10>Gender:</h10><p style="margin-left: 90px;">M</p><br>
-        <h10>Blood Type:</h10><p style="margin-left: 127px;">O</p><br>
-        <h10>Address:</h10><p style="margin-left: 95px;">177A Bleecker Street, Washington, D.C., 20001</p><br>
-        <h10>Emergency Contact:</h10>
-        <p style="margin-left: 210px;">Daria Rucker | Ex Wife | (202) - 330 -1939
-            <br>Jana Sperry-Oates | Daughter | (202) - 810 - 1962</p>
-    </div>
-    <div class="profile-Con">
-        <h10>Known Medical Conditions:</h10><br>
-        <p>ADHD - Diagnosed in 2014, managed with Adderall</p>
-    </div>
-    <div class="profile-Med">
-        <h10>Known Medication:</h10><p style="margin-left: 205px;">Adderall</p><br>
-        <h10>Known Side Effects:</h10><p style="margin-left: 210px;">Agitation, Headache, Dizziness - One case involved mentioned side effects, was treated with rest and hydration.</p>
-    </div>
-    <div class="profile-Coupon">
-        <div class="coupon1">
-            <h11>10% OFF</h11>
-            <p>Get 10% off of your next purchase of Adderall<br>Expires 7/22</p>
+    <!--Profile-->
+    <section class="profile">
+        <div class="Jerry-img">
+            <img src="images/JerrySperry.jpg">
         </div>
-        <div class="coupon2">
-            <h11>15% OFF</h11>
-            <p>Get 15% off of your next purchase of Adderall<br>Expires 8/22</p>
-        </div>
+        <h9>Jerry Sperry</h9>
+    </section>
+    <div class="description-Btn">
+        <button class="description-tab">Medical Record</button>
+        <button class="description-tab">Medications</button>
+        <button class="description-tab">Coupons</button>
     </div>
-</section>
+    <section style="background-color: #F4F4F4;">
+        <div class="profile-Record">
+            <h10>DOB:</h10><p style="margin-left: 60px;">March 4, 1968</p><br>
+            <h10>Gender:</h10><p style="margin-left: 90px;">M</p><br>
+            <h10>Blood Type:</h10><p style="margin-left: 127px;">O</p><br>
+            <h10>Address:</h10><p style="margin-left: 95px;">177A Bleecker Street, Washington, D.C., 20001</p><br>
+            <h10>Emergency Contact:</h10>
+            <p style="margin-left: 210px;">Daria Rucker | Ex Wife | (202) - 330 -1939
+                <br>Jana Sperry-Oates | Daughter | (202) - 810 - 1962</p>
+        </div>
+        <div class="profile-Con">
+            <h10>Known Medical Conditions:</h10><br>
+            <p>ADHD - Diagnosed in 2014, managed with Adderall</p>
+        </div>
+        <div class="profile-Med">
+            <h10>Known Medication:</h10><p style="margin-left: 205px;">Adderall</p><br>
+            <h10>Known Side Effects:</h10><p style="margin-left: 210px;">Agitation, Headache, Dizziness - One case involved mentioned side effects, was treated with rest and hydration.</p>
+        </div>
+        <div class="profile-Coupon">
+            <div class="coupon1">
+                <h11>10% OFF</h11>
+                <p>Get 10% off of your next purchase of Adderall<br>Expires 7/22</p>
+            </div>
+            <div class="coupon2">
+                <h11>15% OFF</h11>
+                <p>Get 15% off of your next purchase of Adderall<br>Expires 8/22</p>
+            </div>
+        </div>
+    </section>
 
-<!--Footer-->
+    <!--Footer-->
 <footer>
     <div class="get-in-touch">
         <h8>GET IN TOUCH</h8><br>
@@ -121,5 +123,6 @@
         <p>For more information please refer to: <a href="https://www.drugs.com/" target="_blank" class="marketing-and-media" style="color: #0080A6;">Drugs.com</a></p>
     </div>
 </footer>
+    <script src="script.js"></script>
 </body>
 </html>
