--- a/home.html
+++ b/home.html
@@ -19,15 +19,14 @@
     <header class="NavBar">
         <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
-                <i class="fa fa-home" id="home"></i>
-                <a href="home.html"></a>
+                <a href="home.html" style="color: black;"><i class="fa fa-home" id="home"></i></a>
             </button>
         </div>
             <img src="images/PharmlyLogo.png" id="headerImg">
             <div class="NavBarBtn">
                 <button class="NavBarBtn">
                     <i class="fa fa-user-circle" id="login"></i>
-                    <a href="profile.html">Login</a>
+                    <a href="profile.html" style="color: black;">Login</a>
                 </button>
             </div>
     </header>
@@ -50,7 +49,7 @@
         <div class="search">
             <h2>Enter your medication:</h2>
             <!--Search Form-->
-            <form action="action_page.php">
+            <form action="search.html">
                 <input type="text" placeholder="Search" name="search" style="border-width: 2px; text-indent: 10px;">
                 <button type="submit" id="searchBtn"><i class="fa fa-search" id="searchBtn" ></i></button>
             </form>
