--- a/profile.html
+++ b/profile.html
@@ -19,15 +19,14 @@
     <header class="NavBar">
         <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
-                <i class="fa fa-home" id="home"></i>
-                <a href="home.html"></a>
+                <a href="home.html" style="color: black;"><i class="fa fa-home" id="home"></i></a>
             </button>
         </div>
             <img src="images/PharmlyLogo.png" id="headerImg">
             <div class="NavBarBtn">
                 <button class="NavBarBtn">
                     <i class="fa fa-user-circle" id="login"></i>
-                    <a href="profile.html">Login</a>
+                    <a href="profile.html" style="color: black;">Login</a>
                 </button>
             </div>
     </header>
@@ -36,7 +35,7 @@
     <div class="header-title">
         <h3 style="padding-top: 55px;">Enter your medication:</h3>
             <!--Search Form-->
-        <form class="example" action="action_page.php">
+        <form class="example" action="search.html">
             <input type="text" placeholder="Search" name="search" style="border-width: 2px; text-indent: 10px;">
             <button type="submit" id="headerBtn"><i class="fa fa-search" id="headerBtn"></i></button>
         </form>
@@ -50,9 +49,9 @@
         <h9>Jerry Sperry</h9>
     </section>
     <div class="description-Btn">
-        <button class="description-tab">Medical Record</button>
-        <button class="description-tab">Medications</button>
-        <button class="description-tab">Coupons</button>
+        <button class="description-tab4">Medical Record</button>
+        <button class="description-tab5">Medications</button>
+        <button class="description-tab6">Coupons</button>
     </div>
     <section style="background-color: #F4F4F4;">
         <div class="profile-Record">
@@ -72,7 +71,7 @@
             <h10>Known Medication:</h10><p style="margin-left: 205px;">Adderall</p><br>
             <h10>Known Side Effects:</h10><p style="margin-left: 210px;">Agitation, Headache, Dizziness - One case involved mentioned side effects, was treated with rest and hydration.</p>
         </div>
-        <div class="profile-Coupon">
+        <div class="profile-Coupon" id="profile-Coupon">
             <div class="coupon1">
                 <h11>10% OFF</h11>
                 <p>Get 10% off of your next purchase of Adderall<br>Expires 7/22</p>
