--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="NavBar">
         <div class="NavBarBtn" id="NavBar">
             <button class="NavBarBtn">
-                <a href="home.html" style="color: black;"><i class="fa fa-home" id="home"></i></a>
+                <a href="index.html" style="color: black;"><i class="fa fa-home" id="home"></i></a>
             </button>
         </div>
             <img src="images/PharmlyLogo.png" id="headerImg">
